# ChangeLog for net-analyzer/argus-clients
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.12 2010/07/16 09:20:34 fauli Exp $

  16 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  argus-clients-3.0.3.8.ebuild:
  stable x86, bug 323577

  31 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  argus-clients-3.0.2.ebuild:
  x86 stable wrt bug #318619

*argus-clients-3.0.3.8 (06 May 2010)

  06 May 2010; Peter Volkov <pva@gentoo.org> +argus-clients-3.0.3.8.ebuild:
  Version bump.

  02 May 2010; Peter Volkov <pva@gentoo.org> +argus-clients-3.0.3.7.ebuild:
  Version bump.

*argus-clients-3.0.3.7 (02 May 2010)

  02 May 2010; Peter Volkov <pva@gentoo.org> +argus-clients-3.0.3.7.ebuild:
  Version bump.

*argus-clients-3.0.2 (30 Nov 2009)

  30 Nov 2009; Peter Volkov <pva@gentoo.org> +argus-clients-3.0.2.ebuild:
  Version bump, fixes bug #247955 thank Diego E. 'Flameeyes' Pettenò for
  report.

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  argus-clients-2.0.6-r1.ebuild:
  Remove virtual/libc

  31 Mar 2007; Marcelo Goes <vanquirius@gentoo.org>
  -argus-clients-2.0.6.ebuild, argus-clients-2.0.6-r1.ebuild:
  Remove old ebuild, add net-analyzer/rrdtool as a runtime dependency, as it
  is needed by ragraph.

*argus-clients-2.0.6-r1 (15 Feb 2007)

  15 Feb 2007; Markus Ullmann <jokey@gentoo.org>
  +files/argus-clients-2.0.6-netmask.patch, +argus-clients-2.0.6-r1.ebuild:
  Add patch from bug #143290 thanks to Joshua Schmidkofer

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> argus-clients-2.0.6.ebuild:
  Removing virtual/libpcap wrt bug #117898

  30 Jan 2006; Simon Stelling <blubb@gentoo.org> argus-clients-2.0.6.ebuild:
  added ~amd64 keyword

  14 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  argus-clients-2.0.6.ebuild:
  added to ~ppc, bug #112157

*argus-clients-2.0.6 (08 Jan 2006)

  08 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,