@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/argus
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/ChangeLog,v 1.25 2010/07/16 09:19:29 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus/ChangeLog,v 1.26 2010/07/18 13:27:35 nixnut Exp $
+
+  18 Jul 2010; <nixnut@gentoo.org> argus-3.0.3.8.ebuild:
+  ppc stable #323577
 
   16 Jul 2010; Christian Faulhammer <fauli@gentoo.org> argus-3.0.3.8.ebuild:
   stable x86, bug 323577
