@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/argus-clients
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.12 2010/07/16 09:20:34 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/argus-clients/ChangeLog,v 1.13 2010/07/18 13:28:42 nixnut Exp $
+
+  18 Jul 2010; <nixnut@gentoo.org> argus-clients-3.0.3.8.ebuild:
+  ppc stable #323577
 
   16 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
   argus-clients-3.0.3.8.ebuild:
